fix: resolved issue file memory reository